@@ -1,3 +1,11 @@
+2004-10-28	blytkerchan
+	* array_test.c: canonicalize the libmemory includes
+	* heap_test.c: ditto
+	* list_test.c: ditto
+	* map_test.c: ditto
+	* queue_test.c: ditto
+	* stack_test.c: ditto
+	
 2004-05-11	blytkerchan
 	* hash_test6.c
 	(test_glib): add a value for the n_buckets parameter
